--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,31 @@ dillon:
   name: Dillon Example
   email: dillon@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+  
+sam:
+  name: Sam Kinkade
+  email: skinkade@example.gov
+  password_digest: <%= User.digest('password') %>
+  
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
+
+lana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+
+malory:
+  name: Malory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
